# pixel-correction

./: README.md  setup.cfg
pixel_correction/: _widget.py  napari.yaml
pixel_correction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
