[metadata]
name = pixel-correction
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True

# add your package requirements here
install_requires =
    napari
    scikit-image

[options.entry_points]
napari.manifest =
    pixel-correction = pixel_correction:napari.yaml