[metadata]
name = pixel-correction
long_description = file: README.md
version = 0.0.1
classifiers =
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing

[options]
packages = find:
include_package_data = True

# add your package requirements here
install_requires =
    napari
    scikit-image
python_requires = >=3.8
package_dir =
    =src

[options.entry_points]
napari.manifest =
    pixel-correction = pixel_correction:napari.yaml
    
[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
napari-blossom = napari.yaml

[testpypi]
username = "hmetua"
password = "Sousmarin13+"